--- a/ETL_Mini_Project_ASaini_DKuffel.ipynb
+++ b/ETL_Mini_Project_ASaini_DKuffel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,8 +267,7 @@
      "text": [
       "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
       "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
-      "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category',\n",
-      "       'category', 'subcategory'],\n",
+      "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +604,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +837,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1029,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2413,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2474,14 +2473,14 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', engine='openpyxl' ,header=2)\n",
     "contact_info_df.head()"
    ]
   },
@@ -2509,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2523,10 @@
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
     "dict_values = []\n",
-    "\n",
+    "for info, row in contact_info_df.iterrows():\n",
+    "    contact_info_dict = json.loads(row['contact_info'])\n",
+    "    row_values = [v for k, v in contact_info_dict.items()]\n",
+    "    dict_values.append(row_values)\n",
     "\n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
@@ -2532,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2558,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>contact_id</th>\n",
+       "      <th>contact id</th>\n",
        "      <th>name</th>\n",
        "      <th>email</th>\n",
        "    </tr>\n",
@@ -2565,54 +2567,48 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4661</td>\n",
-       "      <td>Cecilia Velasco</td>\n",
-       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>3765</td>\n",
+       "      <td>4187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3765</td>\n",
+       "      <td>Cecilia Velasco</td>\n",
        "      <td>Mariana Ellis</td>\n",
-       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>Sofie Woods</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4187</td>\n",
-       "      <td>Sofie Woods</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
        "      <td>sofie.woods@riviere.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4941</td>\n",
-       "      <td>Jeanette Iannotti</td>\n",
-       "      <td>jeanette.iannotti@yahoo.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2199</td>\n",
-       "      <td>Samuel Sorgatz</td>\n",
-       "      <td>samuel.sorgatz@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   contact_id               name                         email\n",
-       "0        4661    Cecilia Velasco  cecilia.velasco@rodrigues.fr\n",
-       "1        3765      Mariana Ellis       mariana.ellis@rossi.org\n",
-       "2        4187        Sofie Woods       sofie.woods@riviere.com\n",
-       "3        4941  Jeanette Iannotti   jeanette.iannotti@yahoo.com\n",
-       "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
+       "                     contact id                     name  \\\n",
+       "0                          4661                     3765   \n",
+       "1               Cecilia Velasco            Mariana Ellis   \n",
+       "2  cecilia.velasco@rodrigues.fr  mariana.ellis@rossi.org   \n",
+       "\n",
+       "                     email  \n",
+       "0                     4187  \n",
+       "1              Sofie Woods  \n",
+       "2  sofie.woods@riviere.com  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "for data in dict_values:\n",
+    "    contact_df= pd.DataFrame({'contact id': dict_values[0], 'name':dict_values[1] ,'email':dict_values[2] })\n",
+    "contact_df"
    ]
   },
   {
