--- a/ETL_Mini_Project_ASaini_DKuffel.ipynb
+++ b/ETL_Mini_Project_ASaini_DKuffel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2473,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2508,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2598,7 +2598,7 @@
        "2  sofie.woods@riviere.com  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2613,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2621,154 +2621,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
       "Data columns (total 3 columns):\n",
       " #   Column      Non-Null Count  Dtype \n",
       "---  ------      --------------  ----- \n",
-      " 0   contact_id  1000 non-null   int64 \n",
-      " 1   name        1000 non-null   object\n",
-      " 2   email       1000 non-null   object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 23.6+ KB\n"
+      " 0   contact id  3 non-null      object\n",
+      " 1   name        3 non-null      object\n",
+      " 2   email       3 non-null      object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 200.0+ bytes\n"
      ]
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>email</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4661</td>\n",
-       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
-       "      <td>Cecilia</td>\n",
-       "      <td>Velasco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3765</td>\n",
-       "      <td>mariana.ellis@rossi.org</td>\n",
-       "      <td>Mariana</td>\n",
-       "      <td>Ellis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4187</td>\n",
-       "      <td>sofie.woods@riviere.com</td>\n",
-       "      <td>Sofie</td>\n",
-       "      <td>Woods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4941</td>\n",
-       "      <td>jeanette.iannotti@yahoo.com</td>\n",
-       "      <td>Jeanette</td>\n",
-       "      <td>Iannotti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2199</td>\n",
-       "      <td>samuel.sorgatz@gmail.com</td>\n",
-       "      <td>Samuel</td>\n",
-       "      <td>Sorgatz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5650</td>\n",
-       "      <td>socorro.luna@hotmail.com</td>\n",
-       "      <td>Socorro</td>\n",
-       "      <td>Luna</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5889</td>\n",
-       "      <td>carolina.murray@knight.com</td>\n",
-       "      <td>Carolina</td>\n",
-       "      <td>Murray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4842</td>\n",
-       "      <td>kayla.moon@yahoo.de</td>\n",
-       "      <td>Kayla</td>\n",
-       "      <td>Moon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3280</td>\n",
-       "      <td>ariadna.geisel@rangel.com</td>\n",
-       "      <td>Ariadna</td>\n",
-       "      <td>Geisel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5468</td>\n",
-       "      <td>danielle.ladeck@scalfaro.net</td>\n",
-       "      <td>Danielle</td>\n",
-       "      <td>Ladeck</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   contact_id                         email first_name last_name\n",
-       "0        4661  cecilia.velasco@rodrigues.fr    Cecilia   Velasco\n",
-       "1        3765       mariana.ellis@rossi.org    Mariana     Ellis\n",
-       "2        4187       sofie.woods@riviere.com      Sofie     Woods\n",
-       "3        4941   jeanette.iannotti@yahoo.com   Jeanette  Iannotti\n",
-       "4        2199      samuel.sorgatz@gmail.com     Samuel   Sorgatz\n",
-       "5        5650      socorro.luna@hotmail.com    Socorro      Luna\n",
-       "6        5889    carolina.murray@knight.com   Carolina    Murray\n",
-       "7        4842           kayla.moon@yahoo.de      Kayla      Moon\n",
-       "8        3280     ariadna.geisel@rangel.com    Ariadna    Geisel\n",
-       "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
-    "\n",
-    "# Drop the contact_name column\n",
-    "\n"
+    "# Check the datatypes.\n",
+    "contact_df.info()"
    ]
   },
   {
@@ -2797,99 +2664,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
+       "      <th>contact id</th>\n",
        "      <th>email</th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4661</td>\n",
-       "      <td>Cecilia</td>\n",
-       "      <td>Velasco</td>\n",
-       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>4187</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3765</td>\n",
+       "      <td>Cecilia Velasco</td>\n",
+       "      <td>Sofie Woods</td>\n",
        "      <td>Mariana</td>\n",
        "      <td>Ellis</td>\n",
-       "      <td>mariana.ellis@rossi.org</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4187</td>\n",
-       "      <td>Sofie</td>\n",
-       "      <td>Woods</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
        "      <td>sofie.woods@riviere.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4941</td>\n",
-       "      <td>Jeanette</td>\n",
-       "      <td>Iannotti</td>\n",
-       "      <td>jeanette.iannotti@yahoo.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2199</td>\n",
-       "      <td>Samuel</td>\n",
-       "      <td>Sorgatz</td>\n",
-       "      <td>samuel.sorgatz@gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5650</td>\n",
-       "      <td>Socorro</td>\n",
-       "      <td>Luna</td>\n",
-       "      <td>socorro.luna@hotmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5889</td>\n",
-       "      <td>Carolina</td>\n",
-       "      <td>Murray</td>\n",
-       "      <td>carolina.murray@knight.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4842</td>\n",
-       "      <td>Kayla</td>\n",
-       "      <td>Moon</td>\n",
-       "      <td>kayla.moon@yahoo.de</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3280</td>\n",
-       "      <td>Ariadna</td>\n",
-       "      <td>Geisel</td>\n",
-       "      <td>ariadna.geisel@rangel.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5468</td>\n",
-       "      <td>Danielle</td>\n",
-       "      <td>Ladeck</td>\n",
-       "      <td>danielle.ladeck@scalfaro.net</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   contact_id first_name last_name                         email\n",
-       "0        4661    Cecilia   Velasco  cecilia.velasco@rodrigues.fr\n",
-       "1        3765    Mariana     Ellis       mariana.ellis@rossi.org\n",
-       "2        4187      Sofie     Woods       sofie.woods@riviere.com\n",
-       "3        4941   Jeanette  Iannotti   jeanette.iannotti@yahoo.com\n",
-       "4        2199     Samuel   Sorgatz      samuel.sorgatz@gmail.com\n",
-       "5        5650    Socorro      Luna      socorro.luna@hotmail.com\n",
-       "6        5889   Carolina    Murray    carolina.murray@knight.com\n",
-       "7        4842      Kayla      Moon           kayla.moon@yahoo.de\n",
-       "8        3280    Ariadna    Geisel     ariadna.geisel@rangel.com\n",
-       "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
+       "                     contact id                    email  \\\n",
+       "0                          4661                     4187   \n",
+       "1               Cecilia Velasco              Sofie Woods   \n",
+       "2  cecilia.velasco@rodrigues.fr  sofie.woods@riviere.com   \n",
+       "\n",
+       "                first name                last name  \n",
+       "0                      NaN                      NaN  \n",
+       "1                  Mariana                    Ellis  \n",
+       "2  mariana.ellis@rossi.org  mariana.ellis@rossi.org  "
       ]
      },
      "execution_count": 28,
@@ -2898,7 +2714,14 @@
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contact_df['first name'] = contact_df['name'].str.split().str[0]\n",
+    "contact_df['last name'] = contact_df['name'].str.split().str[-1]\n",
+    "\n",
+    "# Drop the contact_name column\n",
+    "contact_df.drop('name', axis=1, inplace=True)\n",
+    "\n",
+    "contact_df\n"
    ]
   },
   {
@@ -2907,35 +2730,117 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   contact_id  1000 non-null   int64 \n",
-      " 1   first_name  1000 non-null   object\n",
-      " 2   last_name   1000 non-null   object\n",
-      " 3   email       1000 non-null   object\n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 31.4+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact id</th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4661</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cecilia Velasco</td>\n",
+       "      <td>Mariana</td>\n",
+       "      <td>Ellis</td>\n",
+       "      <td>Sofie Woods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>sofie.woods@riviere.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     contact id               first name  \\\n",
+       "0                          4661                      NaN   \n",
+       "1               Cecilia Velasco                  Mariana   \n",
+       "2  cecilia.velasco@rodrigues.fr  mariana.ellis@rossi.org   \n",
+       "\n",
+       "                 last name                    email  \n",
+       "0                      NaN                     4187  \n",
+       "1                    Ellis              Sofie Woods  \n",
+       "2  mariana.ellis@rossi.org  sofie.woods@riviere.com  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Reorder the columns\n",
+    "contact_df = contact_df [['contact id','first name','last name','email']]\n",
+    "contact_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3 entries, 0 to 2\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   contact id  3 non-null      object\n",
+      " 1   first name  2 non-null      object\n",
+      " 2   last name   2 non-null      object\n",
+      " 3   email       3 non-null      object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 224.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contact_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contact_df.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -3855,9 +3760,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
